added new logic
