# src/main/java/org/hits/backend/hackaton/core/defect/DefectPhotoEntity.java
@@ -4,6 +4,7 @@ import java.util.UUID;
 
 public record DefectPhotoEntity(
         String photoId,
-        UUID defectId
+        UUID defectId,
+        boolean isReview
 ) {
 }
