# src/main/java/org/hits/backend/hackaton/rest/defect/v1/DefectFullResponse.java
@@ -14,6 +14,7 @@ public record DefectFullResponse(
         @JsonProperty("type") String type,
         @JsonProperty("distance") Double defectDistance,
         @JsonProperty("create_date") OffsetDateTime creationDate,
-        @JsonProperty("pictures") List<String> images
+        @JsonProperty("pictures_before_repair") List<String> imagesBefore,
+        @JsonProperty("pictures_before_repair") List<String> imagesAfter
 ) {
 }
